# mklink

./: Cargo.toml  test.sh
src/: args.rs  main.rs
