[package]
name = "mklink"
version = "0.9.0"
edition = "2021"
authors = [ "Maximilian Wende <dasisdormax@mailbox.org>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
winapi = "0.3.9"